--- a/uzx/docs/_404.md
+++ b/uzx/docs/_404.md
@@ -1,3 +1,3 @@
 # Error 404 - file not found
 
-!> This piece of documenation is missing! You can [open an issue](#) or [add it](#) yourself over on github.
+!> This piece of documenation is missing! You can [open an issue](https://github.com/edazpotato/edazpotato.github.io/issues/new/choose) or you can [add it yourself](https://github.com/edazpotato/edazpotato.github.io/tree/master/uzx/docs) over on github.
